// Copyright 2019 Luis Guill√©n Civera <luisguillenc@gmail.com>. View LICENSE.

syntax = "proto3";

import "github.com/golang/protobuf/ptypes/empty/empty.proto";
import "github.com/golang/protobuf/ptypes/timestamp/timestamp.proto";

package luids.tlsutil.v1;
option go_package = "github.com/luids-io/api/protogen/tlsutilpb";

service Analyze {
    rpc SendMessages (stream SendMessageRequest) returns (google.protobuf.Empty) {}
}

message SendMessageRequest {
    MsgType type = 1;
    int64 stream_id = 2;
    MsgOpen open = 4;
    MsgData data = 5;
}

enum MsgType {
    DATA = 0;
    OPEN = 1;
    CLOSE = 2;
}

message MsgOpen {
    string source_ip = 1;
    string destination_ip = 2;
    uint32 source_port = 3;
    uint32 destination_port = 4;
}

message MsgData {
    google.protobuf.Timestamp timestamp = 1;
    int32 bytes = 2;
    bool saw_start = 3;
    bool saw_end = 4;
    repeated bytes records = 5;
    string msg_err = 6;
}
